special tab/backtab handling to align kglobalaccel

BUG: 310476
FIXED-IN: 4.10
REVIEW: 107441